<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.sherlockshi.materialwidgetpractise.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_default"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_theme"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/ThemeSwitch" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeSwitch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_red"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/RedSwitch" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/RedSwitch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_green"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/GreenSwitch" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/GreenSwitch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_blue"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/BlueSwitch" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/BlueSwitch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:text="@string/title_purple"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/PurpleSwitch" />

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/PurpleSwitch" />
    </LinearLayout>
</LinearLayout>
